fixed clipping of close button in ios

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -774,12 +774,14 @@ button.button--arrow.inactive {
 .lightbox__button-close {
   -ms-flex-item-align: end;
       align-self: flex-end;
-  margin-bottom: 33px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-bottom: 30px;
   color: #ffffff;
 }
 @media (min-width: 641px) {
   .lightbox__button-close {
-    margin-bottom: 40px;
+    margin-bottom: 37px;
   }
 }
 .lightbox__image {
